testing new modifications

--- a/guide_templates/markup_example_template.html.erb
+++ b/guide_templates/markup_example_template.html.erb
@@ -3,6 +3,9 @@
     <%= rendered_example %>
   </div>
   <div class="codeBlock">
+    <div class="header">
+    Code
+    </div>
     <div class="highlight">
       <pre><%= code_example %></pre>
     </div>
