--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -2,7 +2,7 @@
 ---
 title: Buttons
 name: button
-category: Base CSS
+category: Buttons CSS
 ---
 
 Button styles can be applied to any element. Typically you'll want to
@@ -21,12 +21,12 @@ use either a `<button>` or an `<a>` element:
 
 /*doc
 ---
-title: Other
-name: other
-category: basics
+title: Color
+name: color
+category: Color CSS
 ---
 
-#Other Stuff
+#Side Note
 
 */ 
 
